--- a/src/toy-mlir/paser/CMakeLists.txt
+++ b/src/toy-mlir/paser/CMakeLists.txt
@@ -2,7 +2,10 @@ file(GLOB SOURCES *.cpp)
 add_library(AST_LIB STATIC ${SOURCES})
 
 # 链接头文件
-target_link_libraries(AST_LIB PRIVATE INCLUDE_DIRS)
+target_link_libraries(
+    AST_LIB PRIVATE 
+    INCLUDE_DIRS
+)
 
 # 安装规则
 install(TARGETS AST_LIB DESTINATION lib)
