[.gitignore]:修改git提交文件修改规则

--- a/.gitignore
+++ b/.gitignore
@@ -54,11 +54,4 @@ dkms.conf
 # output
 *output*
 .vscode
-*build*
-<<<<<<< HEAD
-
-=======
-llvm/
-
-.codegpt
->>>>>>> 8def5b1691611001f1cdc3fed2975bcd48a6f211
+build/
